Fix Feed Photo modal on mobile

--- a/src/Components/Photo/PhotoCommentsForm.module.css
+++ b/src/Components/Photo/PhotoCommentsForm.module.css
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: stretch;
-  margin: 1rem;
+  margin: 1rem 1rem 0 1rem;
+  padding-bottom: 1rem;
 }
 
 .textarea {
