--- a/src/Components/Photo/PhotoContent.module.css
+++ b/src/Components/Photo/PhotoContent.module.css
@@ -80,7 +80,7 @@
 @media (max-width: 64rem) {
   .photo {
     height: auto;
-    max-width: calc(100vh - 4rem);
+    max-height: calc(100vh - 4rem);
     overflow-y: auto;
     grid-template-columns: minmax(20rem, 40rem);
   }
